
version 0.3  Chris O'Brien  <siege@preoccupied.net>
	
	2004-06-27: Fixed bug #980572. Thanks a lot to Joe Marcus Clarke
	for all the debugging help!

	* common.c: privacy list has a name in it
	
	2004-06-23: Sametime blist format parser/generator seems to be
	working.

	* common.c: fixed a nasty crash/bug discovered by nosnilmot. Base
	type serialization wasn't correctly checking available buffer
	lengths, leading to unhealthy overruns. Won't happen anymore.
	
	* srvc_aware.c: fixed nasty bug in removing entries from a list
	which made the whole service unstable.

	* st_list.c, st_list.h: added to CVS. Simple API for loading and
	storing a heirarchy of group/users into a sametime format list.
	
	2004-06-21: Bug fix and API cleanup.

	* service.c, service.h: refinements to service start/stop and
	state checking
	
	* srvc_im.c: fixed a reported bug where messages were not being
	rejected even when the user was in mwStatus_BUSY. Thanks jdob!
	
	2004-06-18: Hopefully fixed bug #968973, requires testing by
	someone normally afflicted

	* channel.c, channel.h: added mwChannel_markActive
	
	* service.c, service.h: added start/stop, as well as related state
	tracking calls and utility functions
	
	* session.c: effectively rewrote mwSession_recv
	
	* srvc_store.c, srvc_store.h: added to CVS
	
	2004-06-15: Reworking services to follow a start/stop system.
	Moving service structures into a non-visible space.  Added support
	for the storage service.  Meanwhile now has its own client type
	identifier, 0x1700, and defaults to using that rather than the
	Java App identifier of 0x1003
	
version 0.2  Chris O'Brien  <siege@preoccupied.net>

	2004-05-17: Refactoring service and channel related code out of
	session.[ch], started using g_return_* functions.  Moved
	meanwhile-gaim plugin into its own module, for my own sanity.

version 0.1  Chris O'Brien  <siege@preoccupied.net>
	
	2004-04-23: Release against Gaim 0.77, tagged v0_77
