@@ -1,10 +1,16 @@
 
 version 0.3  Chris O'Brien  <siege@preoccupied.net>
-	
+
+	2004-06-28: Release! CVS tagged as meanwhile-0_3
+		
 	2004-06-27: Fixed bug #980572. Thanks a lot to Joe Marcus Clarke
 	for all the debugging help!
 
-	* common.c: privacy list has a name in it
+	* common.c: privacy list has a name in it, who knew?
+
+	* st_list.c: revamped the parsing and generation of sametime's
+	buddy list format. Seems to be working alright, but there can be
+	some serious ugliness with commas in user ids and in aliases.
 	
 	2004-06-23: Sametime blist format parser/generator seems to be
 	working.
